Phase 5:** Blueprint Validation + Final Cleanup